container fix on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -65,7 +65,7 @@ body {
   height: 100%;
 
   &::before {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     z-index: 2;
